# Helios-Lidar

./: .gitignore  LICENSE  LIDAR_SOURCES.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
app/: __init__.py  config.py  helios_readme.py  jobs.py  lidar_sources.py  main.py
deploy/: README.md  cleanup.cron.example  helios-lidar.service.example  nginx-vhost.conf.example
frontend/: app.js  bg-pointcloud.js  demo.html  demo.js  helios-card.html  helios-card.js  i18n.js  index.html  style.css  viewer.js
pipeline/: __init__.py  cog.py  dsm_to_ndsm.py  laz_to_ndsm.py  validate.py  yaml_snippet.py
tests/: test_health.py
