[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helios-lidar"
#Kept in lock-step with the Helios card version on purpose: the two
#projects ship companion features and a shared number makes it
#trivial to tell users which site/card pair they're on.
version = "1.6.2"
description = "Web pipeline that turns user-uploaded LiDAR data into nDSM Cloud-Optimized GeoTIFFs for the Helios Home Assistant card."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Jerome Cremoux" }]
keywords = ["lidar", "ndsm", "geotiff", "cog", "laz", "gdal", "homeassistant", "helios"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # LAS / LAZ point cloud reader. `lazrs` is a pure-Rust LAZ codec
    # so we don't need a system laszip / LASlib install. scipy gives
    # us the cKDTree we use to do the height-above-ground lookup.
    "laspy[lazrs]>=2.5",
    "scipy>=1.13",
    "numpy>=1.26",
    # laspy needs pyproj to surface the LAZ file's embedded CRS as a
    # pyproj.CRS we can hand to GDAL when writing the output raster.
    # Without it, header.parse_crs() returns None and we'd fail with
    # the "no embedded CRS" error even on well-formed inputs.
    "pyproj>=3.6",
    # GDAL Python bindings come from system python3-gdal via the
    # --system-site-packages venv; pinning here would break the
    # ABI match with the system libgdal.
    # "GDAL>=3.8,<4",
    # Renders the Helios README (Markdown) into HTML server-side
    # for the /helios-card page. Used by the GitHub-README fetcher,
    # cached in-process so we don't hammer GitHub's API.
    "markdown>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://helios-lidar.org"
Repository = "https://github.com/ReikanYsora/Helios-Lidar"
Issues = "https://github.com/ReikanYsora/Helios-Lidar/issues"
Helios = "https://github.com/ReikanYsora/Helios"

[tool.setuptools.packages.find]
include = ["app*", "pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
